--- a/_posts/2020_05_15_R_1강_post.md
+++ b/_posts/2020_05_15_R_1강_post.md
@@ -4,8 +4,8 @@ date : 2020-05-15 20:51:30 -0400
 categories : R update
 ---
 
-# 5.1.1
-# 라이브러리 불러오기
+5.1.1
+라이브러리 불러오기
 ​```r
 library(nycflights13)
 library(tidyverse)
